@@ -78,6 +78,13 @@ UNRELEASED
     * BREAKING CHANGE: no more opts.jsonp in algoliasearch()
       Previously used as a way to force/disable jsonp. The request strategy is now more robust and does not
       requires jsonp: param
+    * BREAKING CHANGE: JSON2.js is no more included in the main build.
+      If you need to support IE7 <= or IE8 quirks, add this:
+        ```html
+        <!--[if lte IE 7]>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20140204/json2.min.js"></script>
+        <![endif]-->
+        ```
 
 
 2015-02-03  2.9.2
